src/snapshots/arwen_elrond_ipc__simple_exp_parser_1.snap
---
source: src/main.rs
expression: parsed_pred
---
Op(
    Generic(
        "Unknown ParserType",
    ),
    "mem",
    [
        Var(
            Generic(
                "Unknown ParserType",
            ),
            "l1",
        ),
        Var(
            Generic(
                "Unknown ParserType",
            ),
            "u",
        ),
    ],
)
