src/snapshots/arwen_elrond_ipc__splayhp_assertion1_parser.snap
---
source: src/main.rs
expression: parser.parse(&assertion).unwrap()
---
let preds = [| "mem" |]

let post (x : int) (tree1 : Splayhp.t) (tree2 : Splayhp.t) (tree3 : Splayhp.t) (u : int) =
  iff (mem tree1 u) ((mem tree2 u || mem tree3 u))

